# clr-loader

./: .gitignore  Example.ipynb  Justfile  LICENSE  MANIFEST.in  README.md  build_netfx_loader.sh  pyproject.toml  setup.cfg  setup.py
.github/: dependabot.yml
.github/actions/install-mono/: action.yml
.github/workflows/: ci-arm.yml  ci.yml  docs.yml
clr_loader/: __init__.py  coreclr.py  framework.py  hostfxr.py  mono.py  netfx.py  types.py  wrappers.py
clr_loader/ffi/: __init__.py  coreclr.py  hostfxr.py  mono.py  netfx.py
clr_loader/util/: __init__.py  clr_error.py  coreclr_errors.py  find.py  hostfxr_errors.py  runtime.py  runtime_spec.py
doc/: conf.py  index.rst  reference.rst  requirements.txt  usage.rst
example/: Class1.cs  TestClass.cs  example.csproj  example.sln  example.slnx
netframework_loader/: ClrLoader.cs  ClrLoader.csproj
netfx_loader/: ClrLoader.cs  ClrLoader.csproj  ClrLoader.sln  ClrLoader.slnx  DomainData.cs
tests/: conftest.py  test_common.py
